Fix spacing of data entries

--- a/css/plugin_data.css
+++ b/css/plugin_data.css
@@ -7,6 +7,7 @@ div.dataplugin_entry {
 div.dataplugin_entry dl {
     font-size: 1.2em;
     line-height: 1.3em;
+    margin-right: 0;
     width: auto;
     background: __background__;
 }
